src/OpenCvSharp.Native/include/open_cv_sharp/stitching/stitching.h

typedef struct jyppx_ocv_stitching_py_rotation_warper jyppx_ocv_stitching_py_rotation_warper;
typedef struct jyppx_ocv_stitching_blender jyppx_ocv_stitching_blender;
typedef struct jyppx_ocv_stitching_image_features jyppx_ocv_stitching_image_features;
typedef struct jyppx_ocv_stitching_matches_info jyppx_ocv_stitching_matches_info;
typedef struct jyppx_ocv_stitching_features_matcher jyppx_ocv_stitching_features_matcher;
typedef struct jyppx_ocv_stitching_rect
{
    int x;
    int y;
    int width;
    int height;
} jyppx_ocv_stitching_rect;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_py_rotation_warper_warp_backward(
    const jyppx_ocv_stitching_py_rotation_warper* warper,
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* rotation_matrix,
    int interpolation_mode,
    int border_mode,
    int destination_width,
    int destination_height,
    jyppx_ocv_mat* destination);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_py_rotation_warper_warp_roi(
    const jyppx_ocv_stitching_py_rotation_warper* warper,
    int source_width,
    int source_height,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* rotation_matrix,
    jyppx_ocv_stitching_rect* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_py_rotation_warper_get_scale(
    const jyppx_ocv_stitching_py_rotation_warper* warper,
    float* scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_py_rotation_warper_set_scale(
    jyppx_ocv_stitching_py_rotation_warper* warper,
    float scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_create_default(
    int type,
    int try_gpu,
    jyppx_ocv_stitching_blender** blender);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_create_feather(
    float sharpness,
    jyppx_ocv_stitching_blender** blender);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_create_multi_band(
    int try_gpu,
    int number_of_bands,
    int weight_type,
    jyppx_ocv_stitching_blender** blender);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_stitching_blender_release_handle(
    jyppx_ocv_stitching_blender* blender);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_prepare(
    jyppx_ocv_stitching_blender* blender,
    const int* corner_x,
    const int* corner_y,
    const int* widths,
    const int* heights,
    int item_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_prepare_roi(
    jyppx_ocv_stitching_blender* blender,
    int x,
    int y,
    int width,
    int height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_feed(
    jyppx_ocv_stitching_blender* blender,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    int top_left_x,
    int top_left_y);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_blend(
    jyppx_ocv_stitching_blender* blender,
    jyppx_ocv_mat* destination,
    jyppx_ocv_mat* destination_mask);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_get_sharpness(
    const jyppx_ocv_stitching_blender* blender,
    float* sharpness);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_set_sharpness(
    jyppx_ocv_stitching_blender* blender,
    float sharpness);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_get_number_of_bands(
    const jyppx_ocv_stitching_blender* blender,
    int* number_of_bands);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_set_number_of_bands(
    jyppx_ocv_stitching_blender* blender,
    int number_of_bands);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_blender_create_weight_maps(
    jyppx_ocv_stitching_blender* blender,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    const int* corner_x,
    const int* corner_y,
    int corner_count,
    jyppx_ocv_mat* const* weight_maps,
    int weight_map_count,
    jyppx_ocv_stitching_rect* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_normalize_using_weight_map(
    const jyppx_ocv_mat* weight,
    jyppx_ocv_mat* source);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_create_weight_map(
    const jyppx_ocv_mat* mask,
    float sharpness,
    jyppx_ocv_mat* weight);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_create_laplace_pyramid(
    const jyppx_ocv_mat* image,
    int number_of_levels,
    jyppx_ocv_mat* const* pyramid,
    int pyramid_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_create_laplace_pyramid_gpu(
    const jyppx_ocv_mat* image,
    int number_of_levels,
    jyppx_ocv_mat* const* pyramid,
    int pyramid_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_restore_image_from_laplace_pyramid(
    jyppx_ocv_mat* const* pyramid,
    int pyramid_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_restore_image_from_laplace_pyramid_gpu(
    jyppx_ocv_mat* const* pyramid,
    int pyramid_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_create(
    int image_index,
    int image_width,
    int image_height,
    const jyppx_ocv_key_point* keypoints,
    int keypoint_count,
    const jyppx_ocv_mat* descriptors,
    jyppx_ocv_stitching_image_features** features);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_stitching_image_features_release_handle(
    jyppx_ocv_stitching_image_features* features);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_get_image_index(
    const jyppx_ocv_stitching_image_features* features,
    int* image_index);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_set_image_index(
    jyppx_ocv_stitching_image_features* features,
    int image_index);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_get_image_size(
    const jyppx_ocv_stitching_image_features* features,
    int* image_width,
    int* image_height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_set_image_size(
    jyppx_ocv_stitching_image_features* features,
    int image_width,
    int image_height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_get_keypoints_count(
    const jyppx_ocv_stitching_image_features* features,
    int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_get_keypoints_fill(
    const jyppx_ocv_stitching_image_features* features,
    jyppx_ocv_key_point* keypoints,
    int keypoint_capacity,
    int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_image_features_copy_descriptors(
    const jyppx_ocv_stitching_image_features* features,
    jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_compute_image_features(
    int finder_kind,
    const void* finder_handle,
    const jyppx_ocv_mat* image,
    const jyppx_ocv_mat* mask,
    jyppx_ocv_stitching_image_features* features);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_compute_image_features_batch(
    int finder_kind,
    const void* finder_handle,
    const jyppx_ocv_mat* const* images,
    int image_count,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    jyppx_ocv_stitching_image_features* const* features,
    int feature_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_matches_info_create(
    jyppx_ocv_stitching_matches_info** matches_info);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_stitching_matches_info_release_handle(
    jyppx_ocv_stitching_matches_info* matches_info);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_matches_info_get_metadata(
    const jyppx_ocv_stitching_matches_info* matches_info,
    int* source_image_index,
    int* destination_image_index,
    int* number_of_inliers,
    double* confidence);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_matches_info_copy_homography(
    const jyppx_ocv_stitching_matches_info* matches_info,
    jyppx_ocv_mat* homography);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_matches_info_get_matches_count(
    const jyppx_ocv_stitching_matches_info* matches_info,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_matches_info_get_matches_fill(
    const jyppx_ocv_stitching_matches_info* matches_info,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_matches_info_get_inliers_count(
    const jyppx_ocv_stitching_matches_info* matches_info,
    int* inlier_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_matches_info_get_inliers_fill(
    const jyppx_ocv_stitching_matches_info* matches_info,
    unsigned char* inliers,
    int inlier_capacity,
    int* inlier_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_features_matcher_create_best_of_two_nearest(
    int try_gpu,
    float match_confidence,
    int number_of_matches_threshold1,
    int number_of_matches_threshold2,
    double matches_confidence_threshold,
    jyppx_ocv_stitching_features_matcher** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_features_matcher_factory_best_of_two_nearest(
    int try_gpu,
    float match_confidence,
    int number_of_matches_threshold1,
    int number_of_matches_threshold2,
    double matches_confidence_threshold,
    jyppx_ocv_stitching_features_matcher** matcher);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_stitching_features_matcher_create_range(
    int range_width,
    int try_gpu,
    float match_confidence,
    int number_of_matches_threshold1,
    int number_of_matches_threshold2,
    jyppx_ocv_stitching_features_matcher** matcher);